tests-integration/fixtures/checking/229_record_expression_additional_field/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
test :: { a :: Int }

Types

Diagnostics
error[AdditionalProperty]: Additional properties not allowed: b
  --> 3:1..3:21
  |
3 | test :: { a :: Int }
  | ^~~~~~~~~~~~~~~~~~~~
